# pkg/api/models/email_auth_intent.go
@@ -35,6 +35,9 @@ type EmailAuthIntent struct {
 	// Invalidate all other previously generated Email Auth API keys
 	InvalidateExisting bool `json:"invalidateExisting,omitempty"`
 
+	// Optional custom email address from which to send the email
+	SendFromEmailAddress string `json:"sendFromEmailAddress,omitempty"`
+
 	// Client-side public key generated by the user, to which the email auth bundle (credentials) will be encrypted.
 	// Required: true
 	TargetPublicKey *string `json:"targetPublicKey"`
