# pkg/api/models/update_wallet_result.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// UpdateWalletResult update wallet result
+//
+// swagger:model UpdateWalletResult
+type UpdateWalletResult struct {
+
+	// A Wallet ID.
+	// Required: true
+	WalletID *string `json:"walletId"`
+}
+
+// Validate validates this update wallet result
+func (m *UpdateWalletResult) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateWalletID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *UpdateWalletResult) validateWalletID(formats strfmt.Registry) error {
+
+	if err := validate.Required("walletId", "body", m.WalletID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this update wallet result based on context it is used
+func (m *UpdateWalletResult) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UpdateWalletResult) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UpdateWalletResult) UnmarshalBinary(b []byte) error {
+	var res UpdateWalletResult
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
